2008-06-02 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version increment to 2.23.4

2008-06-02 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.23.3 release.

2008-06-01 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c: Change 'enable dwell' icon to a label.

2008-05-19 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: Fix typos.

2008-05-17 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c:
	Fix ref counting bug.
	Add on/off button to activate dwelling.

2008-05-17 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c: Use a macro instead of calling
	glade_xml_get_widget all the time.

2008-05-17 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c:
	Show a warning if we can't launch gnome-mouse-properties.
	Fix minor HIG issue in warning strings.

2008-05-17 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c:
	Check on start-up if the daemon is already running.
	Remove some unnecessary casts. 

2008-05-14 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: Add more command-line options.
	* man/mousetweaks.1: Add new options.

2008-05-12 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.23.3

2008-05-12 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.23.2 release.

2008-05-12 Gerd Kohlberger <gerdk@svn.gnome.org>

	* po/POTFILES.in: Add mt-common.c

2008-05-12 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c:
	Initialize GnomeProgram in child process.
	Add more info to the a11y warning dialog.
	Plug minor options leak.

2008-05-08 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-common.c:
	* src/mt-common.h:
	Add more dialog types.
	
	* src/pointer-capture-applet.c:
	* src/dwell-click-applet.c:
	Switch to new dialog function.

	* src/mt-main.c:
	Improve the Assistive Technology warning dialog and add an